# hpx

agents/: future_work.md  hpxpy_instructions.md  phylanx_ports.md
agents/phases/phase10/: what_was_done.md
agents/phases/phase11/: what_was_done.md
agents/phases/phase7/: what_was_done.md
agents/phases/phase9/: what_was_done.md
python/: CMakeLists.txt  README.md  pyproject.toml  requirements.txt
python/cmake/: setup_env.sh.in
python/diagnostics/: __init__.py  run_diagnostics.py
python/diagnostics/baselines/: __init__.py  test_numpy_comparison.py
python/diagnostics/scaling/: __init__.py  test_scaling.py
python/diagnostics/verification/: __init__.py  test_hpx_usage.py  test_runtime.py
python/docs/source/: conf.py  index.md
python/docs/source/api/: index.md
python/docs/source/development/: index.md
python/docs/source/examples/: als_recommender.ipynb  black_scholes.ipynb  distributed_analytics.ipynb  distributed_reduction.ipynb  distribution_demo.ipynb  heat_diffusion.ipynb  image_processing.ipynb  index.md  kmeans_clustering.ipynb  lda_topic_modeling.ipynb  monte_carlo.ipynb  monte_carlo_pi.ipynb  multi_locality.ipynb  neural_network.ipynb  parallel_integration.ipynb  scalability.ipynb
python/docs/source/getting_started/: building.md  index.md
python/docs/source/tutorials/: 03_math_and_algorithms.ipynb  04_slicing.ipynb  05_reshape.ipynb  06_gpu_acceleration.ipynb  07_distributed_computing.ipynb  08_benchmarks.ipynb  09_advanced_algorithms.ipynb  index.md
python/docs/source/user_guide/: index.md
python/examples/: als_recommender.ipynb  distributed_analytics.ipynb  distributed_reduction.ipynb  distribution_demo.ipynb  heat_diffusion.ipynb  kmeans_clustering.ipynb  lda_topic_modeling.ipynb  monte_carlo.ipynb  monte_carlo_pi.ipynb  multi_locality.ipynb  neural_network.ipynb  parallel_integration.ipynb  scalability.ipynb
python/hpxpy/: __init__.py
python/src/bindings/: algorithm_bindings.cpp  array_bindings.cpp  collective_bindings.cpp  core_module.cpp  distributed_array_bindings.cpp  gpu_bindings.cpp  ndarray.hpp  operators.hpp  runtime_bindings.cpp  sycl_bindings.cpp
python/src/types/: distributed_array.hpp
python/tests/unit/: test_advanced_algorithms.py  test_array_ops.py  test_distributed_arrays.py  test_execution_policy.py  test_gpu.py  test_operators.py  test_runtime.py  test_sycl.py
python/tutorials/: 01_getting_started.ipynb  02_parallel_algorithms.ipynb  03_distributed_computing.ipynb  03_math_and_algorithms.ipynb  05_reshape.ipynb  06_array_operations.ipynb  06_gpu_acceleration.ipynb  07_benchmarks.ipynb  07_distributed_computing.ipynb  08_benchmarks.ipynb  08_monte_carlo.ipynb  09_advanced_algorithms.ipynb  09_black_scholes.ipynb  10_image_processing.ipynb  README.md
